--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -33,8 +33,9 @@
 
     <section class="name">
       <a href="/">
-        <span id="fname">{{ site.name|split:' '|first }}</span>
-        <span id="lname">{{ site.name|split:' '|last }}</span>
+        <!--<span id="fname">{{ site.name|split:' '|first }}</span>
+        <span id="lname">{{ site.name|split:' '|last }}</span>-->
+        <span> {{site.name}}</span>
       </a>
     </section>
 
