--- a/css/main.css
+++ b/css/main.css
@@ -84,6 +84,7 @@ a:visited { color: #a0a; }
 }
 .posts li a{
     text-decoration:none;
+    color:#000;
 }
 
 /*****************************************************************************/
@@ -95,9 +96,9 @@ a:visited { color: #a0a; }
 .site {
   font-size: 115%;
   text-align:left;
-  max-width:650px;
+  max-width:670px;
   min-width:16em;
-  margin: 3em auto 2em;
+  margin: 1em auto 2em;
   padding:10px 23px;
 }
 
@@ -114,10 +115,11 @@ a:visited { color: #a0a; }
   display: inline-block;
   font-size:30px;
   text-transform:uppercase;
+  font-family:"Hei",sans-serif;
 }
 
 .title a {
-  color: #a00;
+  color: #000;
 }
 
 .title a:hover {
