--- a/lab/OneThingWell/OneThingWell/Base.lproj/Main.storyboard
+++ b/lab/OneThingWell/OneThingWell/Base.lproj/Main.storyboard
@@ -41,9 +41,9 @@
                                             <dataDetectorType key="dataDetectorTypes" address="YES"/>
                                         </textView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jgB-Dr-AdQ">
-                                            <rect key="frame" x="35" y="21" width="256" height="40"/>
+                                            <rect key="frame" x="35" y="21" width="105" height="40"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="256" id="a6O-v1-vdr"/>
+                                                <constraint firstAttribute="width" constant="105" id="a6O-v1-vdr"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" name="STHeitiSC-Medium" family="Heiti SC" pointSize="25"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -73,10 +73,14 @@
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
                                         </button>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GxM-Sp-NN5" userLabel="tagViewContainer">
+                                            <rect key="frame" x="148" y="41" width="437" height="10"/>
+                                        </view>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="rs6-40-Fqn" firstAttribute="height" secondItem="Zo7-3z-vMx" secondAttribute="height" id="0Ln-at-Vwa"/>
                                         <constraint firstItem="XBK-eQ-RUg" firstAttribute="top" secondItem="TNF-cD-mpL" secondAttribute="topMargin" id="41Y-Oa-HPc"/>
+                                        <constraint firstItem="GxM-Sp-NN5" firstAttribute="leading" secondItem="jgB-Dr-AdQ" secondAttribute="trailing" constant="8" id="60b-Ku-VLI"/>
                                         <constraint firstAttribute="trailing" secondItem="NNC-8B-Ne0" secondAttribute="trailing" id="68G-AW-Gvg"/>
                                         <constraint firstItem="Zo7-3z-vMx" firstAttribute="leading" secondItem="XBK-eQ-RUg" secondAttribute="leading" id="6On-Fa-FlI"/>
                                         <constraint firstItem="vhM-hE-O3Y" firstAttribute="bottom" secondItem="SnX-VV-Mn9" secondAttribute="bottom" id="6zS-Ny-43b"/>
@@ -94,10 +98,13 @@
                                         <constraint firstItem="jgB-Dr-AdQ" firstAttribute="top" secondItem="TNF-cD-mpL" secondAttribute="topMargin" constant="13" id="Wxn-od-QuE"/>
                                         <constraint firstItem="Zo7-3z-vMx" firstAttribute="top" secondItem="rs6-40-Fqn" secondAttribute="top" id="Yd2-3i-0BA"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="SnX-VV-Mn9" secondAttribute="bottom" constant="7" id="aDy-Tc-8D4"/>
+                                        <constraint firstItem="GxM-Sp-NN5" firstAttribute="trailing" secondItem="vhM-hE-O3Y" secondAttribute="trailing" id="aff-kg-FUG"/>
                                         <constraint firstItem="XBK-eQ-RUg" firstAttribute="leading" secondItem="TNF-cD-mpL" secondAttribute="leading" id="bPT-2v-v0H"/>
                                         <constraint firstAttribute="centerY" secondItem="NNC-8B-Ne0" secondAttribute="centerY" id="baM-g0-LPn"/>
+                                        <constraint firstItem="GxM-Sp-NN5" firstAttribute="top" secondItem="TNF-cD-mpL" secondAttribute="topMargin" constant="33" id="bwZ-Oa-1TR"/>
                                         <constraint firstItem="XBK-eQ-RUg" firstAttribute="leading" secondItem="NNC-8B-Ne0" secondAttribute="leading" id="d9w-oa-ICd"/>
                                         <constraint firstItem="rs6-40-Fqn" firstAttribute="leading" secondItem="TNF-cD-mpL" secondAttribute="leadingMargin" constant="27" id="dcq-8H-ZTY"/>
+                                        <constraint firstItem="Zo7-3z-vMx" firstAttribute="top" secondItem="GxM-Sp-NN5" secondAttribute="bottom" constant="18" id="ems-hC-9ab"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="vhM-hE-O3Y" secondAttribute="trailing" constant="7" id="fZo-WR-5J9"/>
                                         <constraint firstAttribute="centerY" secondItem="XBK-eQ-RUg" secondAttribute="centerY" id="jJY-QN-EvH"/>
                                         <constraint firstItem="XBK-eQ-RUg" firstAttribute="leading" secondItem="NNC-8B-Ne0" secondAttribute="leading" id="rlU-Uq-vsz"/>
@@ -122,6 +129,7 @@
                                     <outlet property="backgroundAlphaView" destination="NNC-8B-Ne0" id="gvj-C9-UWU"/>
                                     <outlet property="backgroundImageView" destination="XBK-eQ-RUg" id="N4O-WB-dOC"/>
                                     <outlet property="pubTime" destination="vhM-hE-O3Y" id="kWA-tn-7pl"/>
+                                    <outlet property="tagViewContainer" destination="GxM-Sp-NN5" id="nyZ-da-GtB"/>
                                     <outlet property="textBackgroundAlpahView" destination="Zo7-3z-vMx" id="OxT-pP-y6v"/>
                                     <outlet property="textView" destination="rs6-40-Fqn" id="0Ff-sY-7Ff"/>
                                     <outlet property="title" destination="jgB-Dr-AdQ" id="e52-y1-Uo5"/>
@@ -304,10 +312,10 @@
                         <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="jzv-aw-uu7" kind="relationship" relationship="viewControllers" id="NDA-iS-LdQ"/>
-                        <segue destination="H5n-43-aMb" kind="relationship" relationship="viewControllers" id="TcG-QN-oTw"/>
-                        <segue destination="Zx5-Oh-xVl" kind="relationship" relationship="viewControllers" id="kDQ-9D-IcB"/>
-                        <segue destination="zCo-GV-XEK" kind="relationship" relationship="viewControllers" id="DmZ-OC-vtO"/>
+                        <segue destination="H5n-43-aMb" kind="relationship" relationship="viewControllers" id="uZe-G5-rSe"/>
+                        <segue destination="Zx5-Oh-xVl" kind="relationship" relationship="viewControllers" id="XPk-6t-H2y"/>
+                        <segue destination="jzv-aw-uu7" kind="relationship" relationship="viewControllers" id="QAv-XB-nk5"/>
+                        <segue destination="zCo-GV-XEK" kind="relationship" relationship="viewControllers" id="TD0-Q8-GOB"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gfP-bi-Rdn" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -331,7 +339,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="psG-a0-cJQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1272" y="1010"/>
+            <point key="canvasLocation" x="1206" y="1214"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="fN9-sZ-KQ4">
@@ -352,45 +360,11 @@
             </objects>
             <point key="canvasLocation" x="1317" y="2061"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="prg-Rr-te5">
-            <objects>
-                <viewController id="wzs-xx-W9A" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="18o-k5-NMx"/>
-                        <viewControllerLayoutGuide type="bottom" id="VDY-5o-Jjf"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="pKi-4P-Ro4">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="XF4-s7-bGV" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="I2C-a8-Tpe">
-            <objects>
-                <viewController id="Ztk-Mn-PY9" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="s6D-pG-6eY"/>
-                        <viewControllerLayoutGuide type="bottom" id="ZVg-bP-Hwa"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Xgv-nR-dAC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="99Z-Iu-v0m" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-        </scene>
     </scenes>
     <resources>
         <image name="UIActivityTumblr~ipad.png" width="25" height="41"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="d4V-1c-tDr"/>
+        <segue reference="Eu4-cD-wig"/>
     </inferredMetricsTieBreakers>
 </document>
