--- a/lab/OneThingWell/OneThingWell/Base.lproj/Main.storyboard
+++ b/lab/OneThingWell/OneThingWell/Base.lproj/Main.storyboard
@@ -207,7 +207,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FmG-oq-agp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2051" y="1010"/>
+            <point key="canvasLocation" x="2129" y="1138"/>
         </scene>
         <!--Loading...-->
         <scene sceneID="Ao6-8X-TeL">
@@ -247,7 +247,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PSQ-qp-gce" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3006" y="544"/>
+            <point key="canvasLocation" x="3710" y="2544"/>
         </scene>
         <!--One Thing Well-->
         <scene sceneID="Dan-4u-zed">
@@ -273,23 +273,31 @@
             <point key="canvasLocation" x="1259" y="189"/>
         </scene>
         <!--About View Controller-->
-        <scene sceneID="ojv-Dc-R5Z">
+        <scene sceneID="emu-ZG-EVD">
             <objects>
-                <viewController id="zCo-GV-XEK" customClass="AboutViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="TnZ-I7-Q6W"/>
-                        <viewControllerLayoutGuide type="bottom" id="KXr-Pu-K8K"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="rMF-Hw-G1i">
+                <tableViewController id="oW7-1G-BlL" customClass="AboutViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Agp-pg-erv">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" systemItem="more" id="GqE-4g-7Te"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qQm-Iu-NdK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="VhH-XY-yzG">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="VhH-XY-yzG" id="HWC-c5-jVm">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="oW7-1G-BlL" id="OtU-CW-98b"/>
+                            <outlet property="delegate" destination="oW7-1G-BlL" id="VnE-mP-UyK"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="M0D-uo-rtX"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZZ3-nQ-ZGW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1317" y="2963"/>
+            <point key="canvasLocation" x="2077" y="2913"/>
         </scene>
         <!--Thing Rank-->
         <scene sceneID="dld-Ug-JJC">
@@ -333,15 +341,15 @@
                         <color key="selectedImageTintColor" red="0.38431372549999998" green="0.0" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="H5n-43-aMb" kind="relationship" relationship="viewControllers" id="uZe-G5-rSe"/>
+                        <segue destination="vaM-cH-sCh" kind="relationship" relationship="viewControllers" id="ast-CO-j7x"/>
                         <segue destination="Zx5-Oh-xVl" kind="relationship" relationship="viewControllers" id="XPk-6t-H2y"/>
                         <segue destination="jzv-aw-uu7" kind="relationship" relationship="viewControllers" id="QAv-XB-nk5"/>
-                        <segue destination="zCo-GV-XEK" kind="relationship" relationship="viewControllers" id="TD0-Q8-GOB"/>
+                        <segue destination="U1F-um-1jD" kind="relationship" relationship="viewControllers" id="O1R-Nh-ou2"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gfP-bi-Rdn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-177" y="1205"/>
+            <point key="canvasLocation" x="-59" y="2061"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="7zh-jG-7WO">
@@ -379,7 +387,140 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G5y-M0-Rj1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1317" y="2061"/>
+            <point key="canvasLocation" x="1169" y="2071"/>
+        </scene>
+        <!--One Thing Well-->
+        <scene sceneID="oIt-TR-gXD">
+            <objects>
+                <navigationController title="One Thing Well" automaticallyAdjustsScrollViewInsets="NO" id="U1F-um-1jD" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="more" id="XA3-b2-lrq"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="jXo-4Y-fCA">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="oW7-1G-BlL" kind="relationship" relationship="rootViewController" id="ho0-80-rja"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xjc-a0-mq3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1221" y="2925"/>
+        </scene>
+        <!--One Thing Well-->
+        <scene sceneID="oN7-vm-adY">
+            <objects>
+                <collectionViewController title="One Thing Well" id="9h3-Mx-p1g" customClass="MainPageCollectionViewController" sceneMemberID="viewController">
+                    <collectionView key="view" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="2Dv-0T-Rq3">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <collectionViewLayout key="collectionViewLayout" id="j5I-gQ-ite" customClass="MainPageViewLayout"/>
+                        <cells>
+                            <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="reuseMainCell" id="ofn-8O-7Z8" customClass="AppCollectionViewCell">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="449" height="238"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ou-U2-yuu">
+                                            <rect key="frame" x="7" y="8" width="363" height="36"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="36" id="3NQ-BW-Cxx"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fav" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G5T-y1-9F0">
+                                            <rect key="frame" x="37" y="218" width="19" height="14"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="19" id="5uJ-V0-aIL"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lh0-nR-0CB">
+                                            <rect key="frame" x="8" y="213" width="20" height="20"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="20" id="1Gz-pj-CZU"/>
+                                                <constraint firstAttribute="width" constant="20" id="L4N-sW-aEv"/>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="27" id="bQ1-M1-dsw"/>
+                                            </constraints>
+                                            <state key="normal" image="star_selected">
+                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="bQ1-M1-dsw"/>
+                                                </mask>
+                                            </variation>
+                                        </button>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PrW-Aq-isH" userLabel="TagContainerView">
+                                            <rect key="frame" x="108" y="213" width="333" height="20"/>
+                                            <color key="backgroundColor" red="0.98888701199999995" green="0.83429839920000004" blue="0.25584365199999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        </view>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="PrW-Aq-isH" firstAttribute="bottom" secondItem="Lh0-nR-0CB" secondAttribute="bottom" id="18p-Jh-bnZ"/>
+                                    <constraint firstItem="5ou-U2-yuu" firstAttribute="leading" secondItem="Lh0-nR-0CB" secondAttribute="leading" constant="-1" id="5rY-eL-J1k"/>
+                                    <constraint firstItem="Lh0-nR-0CB" firstAttribute="leading" secondItem="ofn-8O-7Z8" secondAttribute="leadingMargin" id="8hI-tH-vqn"/>
+                                    <constraint firstItem="G5T-y1-9F0" firstAttribute="leading" secondItem="Lh0-nR-0CB" secondAttribute="trailing" constant="9" id="8uf-gv-R7q"/>
+                                    <constraint firstAttribute="trailing" secondItem="PrW-Aq-isH" secondAttribute="trailing" constant="8" id="9mI-5h-KRP"/>
+                                    <constraint firstItem="PrW-Aq-isH" firstAttribute="height" secondItem="Lh0-nR-0CB" secondAttribute="height" id="GhB-ww-PP1"/>
+                                    <constraint firstItem="PrW-Aq-isH" firstAttribute="leading" secondItem="G5T-y1-9F0" secondAttribute="trailing" constant="52" id="JpB-Ie-DDB"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="G5T-y1-9F0" secondAttribute="bottom" constant="-2" id="Uc1-Cx-e14"/>
+                                    <constraint firstItem="PrW-Aq-isH" firstAttribute="bottom" secondItem="ofn-8O-7Z8" secondAttribute="bottomMargin" constant="3" id="Z0H-xB-YAc"/>
+                                    <constraint firstItem="PrW-Aq-isH" firstAttribute="trailing" secondItem="ofn-8O-7Z8" secondAttribute="trailingMargin" id="cJ5-1e-eE6"/>
+                                    <constraint firstItem="G5T-y1-9F0" firstAttribute="centerY" secondItem="Lh0-nR-0CB" secondAttribute="centerY" constant="2" id="ccF-Pc-kp4"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="5ou-U2-yuu" secondAttribute="trailing" constant="71" id="osF-sc-cUR"/>
+                                    <constraint firstItem="5ou-U2-yuu" firstAttribute="top" secondItem="ofn-8O-7Z8" secondAttribute="topMargin" id="wx9-Hq-T00"/>
+                                    <constraint firstItem="Lh0-nR-0CB" firstAttribute="bottom" secondItem="ofn-8O-7Z8" secondAttribute="bottomMargin" constant="3" id="ylX-b6-YE6"/>
+                                </constraints>
+                                <size key="customSize" width="449" height="238"/>
+                                <connections>
+                                    <outlet property="appTitle" destination="5ou-U2-yuu" id="1Gq-nU-dPe"/>
+                                    <outlet property="favButton" destination="Lh0-nR-0CB" id="7iM-b2-jJh"/>
+                                    <outlet property="tagContainerView" destination="PrW-Aq-isH" id="9ZA-zN-gCY"/>
+                                    <segue destination="ApE-rD-vO8" kind="show" identifier="showCellDetail" id="mq1-GV-APK"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="9h3-Mx-p1g" id="an1-nk-HO3"/>
+                            <outlet property="delegate" destination="9h3-Mx-p1g" id="31F-Da-6hc"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="One Thing Well" id="nsY-LP-dQZ"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fv2-AJ-BXw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2010" y="3779"/>
+        </scene>
+        <!--One Thing Well-->
+        <scene sceneID="edr-Mj-WGv">
+            <objects>
+                <navigationController title="One Thing Well" automaticallyAdjustsScrollViewInsets="NO" id="vaM-cH-sCh" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="recents" id="3oE-UR-Cnj"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Pbc-3P-IZN">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="9h3-Mx-p1g" kind="relationship" relationship="rootViewController" id="CNj-c5-H7B"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="idj-zp-FZh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1198" y="3779"/>
         </scene>
     </scenes>
     <resources>
@@ -387,6 +528,6 @@
         <image name="star_selected" width="55" height="53"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Eu4-cD-wig"/>
+        <segue reference="mq1-GV-APK"/>
     </inferredMetricsTieBreakers>
 </document>
