vetical center tags

--- a/lab/OneThingWell/OneThingWell/Base.lproj/Main.storyboard
+++ b/lab/OneThingWell/OneThingWell/Base.lproj/Main.storyboard
@@ -810,6 +810,6 @@
         <image name="star_selected" width="55" height="52"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="d4V-1c-tDr"/>
+        <segue reference="mq1-GV-APK"/>
     </inferredMetricsTieBreakers>
 </document>
