--- a/lab/OneThingWell/OneThingWell/Base.lproj/Main.storyboard
+++ b/lab/OneThingWell/OneThingWell/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="14A379a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="T0D-Xv-lnK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="14A386a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="T0D-Xv-lnK">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -834,6 +834,6 @@
         <image name="star_selected" width="55" height="52"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="iMh-j9-5sV"/>
+        <segue reference="mq1-GV-APK"/>
     </inferredMetricsTieBreakers>
 </document>
