--- a/lab/MailCat/MailCat/Base.lproj/Main.storyboard
+++ b/lab/MailCat/MailCat/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="14A388a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="J5r-Zr-DZJ">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="方正清刻本悦宋简体.ttf">
@@ -21,19 +22,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="paper" translatesAutoresizingMaskIntoConstraints="NO" id="gWD-IT-lc4">
-                                <rect key="frame" x="103" y="293" width="394" height="254"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="254" id="bEr-Yt-9Iw"/>
-                                    <constraint firstAttribute="width" constant="394" id="pbD-Y2-o5O"/>
-                                </constraints>
-                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="folder" translatesAutoresizingMaskIntoConstraints="NO" id="3X3-c2-hjj">
-                                <rect key="frame" x="154" y="417" width="293" height="175"/>
+                                <rect key="frame" x="30" y="425" width="540" height="175"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="175" id="AuA-df-UiX"/>
                                     <constraint firstAttribute="width" constant="293" id="aLG-Vs-t1b"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="aLG-Vs-t1b"/>
+                                    </mask>
+                                </variation>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -41,15 +40,24 @@
                         <constraints>
                             <constraint firstAttribute="centerX" secondItem="3X3-c2-hjj" secondAttribute="centerX" id="O3l-Xn-B5l"/>
                             <constraint firstItem="Cw7-UG-bUQ" firstAttribute="top" secondItem="3X3-c2-hjj" secondAttribute="bottom" constant="8" id="T1a-Mg-prA"/>
-                            <constraint firstAttribute="centerX" secondItem="gWD-IT-lc4" secondAttribute="centerX" id="caV-xd-bIE"/>
+                            <constraint firstItem="Cw7-UG-bUQ" firstAttribute="top" secondItem="3X3-c2-hjj" secondAttribute="bottom" id="UGh-Di-Y3s"/>
+                            <constraint firstItem="Cw7-UG-bUQ" firstAttribute="top" secondItem="3X3-c2-hjj" secondAttribute="bottom" id="YbC-jZ-Fnh"/>
+                            <constraint firstItem="3X3-c2-hjj" firstAttribute="width" secondItem="tfz-Uc-kjt" secondAttribute="width" multiplier="0.9" id="mx8-Lg-LxY"/>
+                            <constraint firstItem="Cw7-UG-bUQ" firstAttribute="top" secondItem="3X3-c2-hjj" secondAttribute="bottom" id="sVC-mb-72k"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="T1a-Mg-prA"/>
+                                <exclude reference="UGh-Di-Y3s"/>
+                                <exclude reference="YbC-jZ-Fnh"/>
+                            </mask>
+                        </variation>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="b8e-DV-Vb7" appends="YES" id="7iw-hI-kK6"/>
                         </connections>
                     </view>
                     <connections>
-                        <outlet property="folderImageView" destination="3X3-c2-hjj" id="g2W-hZ-OFg"/>
-                        <outlet property="paperImageView" destination="3X3-c2-hjj" id="lRb-hI-IQS"/>
+                        <outlet property="folderImageView" destination="3X3-c2-hjj" id="bUw-0P-yav"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YKb-GP-Ls8" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -119,7 +127,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="folder" width="396" height="207"/>
-        <image name="paper" width="366" height="376"/>
+        <image name="folder" width="420" height="214"/>
     </resources>
 </document>
